--- a/bookish/Base.lproj/Main.storyboard
+++ b/bookish/Base.lproj/Main.storyboard
@@ -9,6 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="AbrilFatface-Regular.otf">
+            <string>AbrilFatface-Regular</string>
+        </array>
         <array key="HelveticaNeue.ttc">
             <string>HelveticaNeue</string>
         </array>
@@ -28,7 +31,7 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search ..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yf8-eB-aRw" userLabel="Bookish Title">
                                 <rect key="frame" x="8" y="160" width="359" height="61"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="52"/>
+                                <fontDescription key="fontDescription" name="AbrilFatface-Regular" family="Abril Fatface" pointSize="52"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -436,36 +439,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kA9-Em-6HG">
-                                <rect key="frame" x="8" y="120" width="359" height="38.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2b4-tD-nKj">
-                                <rect key="frame" x="8" y="218.5" width="359" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Review Summary" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5mf-93-VtV">
-                                <rect key="frame" x="8" y="299.5" width="359" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MnN-mW-LRW">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kA9-Em-6HG">
+                                        <rect key="frame" x="20" y="20" width="250" height="49"/>
+                                        <fontDescription key="fontDescription" name="AbrilFatface-Regular" family="Abril Fatface" pointSize="36"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2b4-tD-nKj">
+                                        <rect key="frame" x="20" y="101" width="250" height="20"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Review Summary" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5mf-93-VtV">
+                                        <rect key="frame" x="20" y="185" width="250" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="Z0W-4K-Csc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="5mf-93-VtV" firstAttribute="trailing" secondItem="2b4-tD-nKj" secondAttribute="trailing" id="5tE-LN-pOO"/>
+                                    <constraint firstItem="kA9-Em-6HG" firstAttribute="leading" secondItem="MnN-mW-LRW" secondAttribute="leading" constant="20" id="CvS-rT-EDR"/>
+                                    <constraint firstItem="5mf-93-VtV" firstAttribute="top" secondItem="2b4-tD-nKj" secondAttribute="bottom" constant="64" id="Eub-3p-frk"/>
+                                    <constraint firstItem="2b4-tD-nKj" firstAttribute="top" secondItem="kA9-Em-6HG" secondAttribute="bottom" constant="32" id="Pdt-Ol-hCt"/>
+                                    <constraint firstItem="kA9-Em-6HG" firstAttribute="top" secondItem="MnN-mW-LRW" secondAttribute="top" constant="20" id="UWk-zD-QUD"/>
+                                    <constraint firstItem="2b4-tD-nKj" firstAttribute="leading" secondItem="kA9-Em-6HG" secondAttribute="leading" id="WU6-j3-rUE"/>
+                                    <constraint firstItem="5mf-93-VtV" firstAttribute="leading" secondItem="2b4-tD-nKj" secondAttribute="leading" id="cN3-py-hxW"/>
+                                    <constraint firstAttribute="trailing" secondItem="2b4-tD-nKj" secondAttribute="trailing" constant="20" id="lMb-te-XL4"/>
+                                    <constraint firstAttribute="bottom" secondItem="5mf-93-VtV" secondAttribute="bottom" constant="100" id="oZk-8s-YfY"/>
+                                    <constraint firstAttribute="trailing" secondItem="kA9-Em-6HG" secondAttribute="trailing" constant="20" id="rt3-MM-zjg"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="kA9-Em-6HG" firstAttribute="top" secondItem="hwA-f9-dmJ" secondAttribute="bottom" constant="100" id="Kdk-af-w2T"/>
-                            <constraint firstAttribute="trailing" secondItem="kA9-Em-6HG" secondAttribute="trailing" constant="8" id="O5R-a9-A06"/>
-                            <constraint firstItem="2b4-tD-nKj" firstAttribute="leading" secondItem="kA9-Em-6HG" secondAttribute="leading" id="Que-Mk-FL6"/>
-                            <constraint firstItem="2b4-tD-nKj" firstAttribute="trailing" secondItem="kA9-Em-6HG" secondAttribute="trailing" id="RCX-qM-o9N"/>
-                            <constraint firstItem="kA9-Em-6HG" firstAttribute="leading" secondItem="8kW-wb-zhA" secondAttribute="leading" constant="8" id="ag0-SE-u3C"/>
-                            <constraint firstItem="5mf-93-VtV" firstAttribute="trailing" secondItem="2b4-tD-nKj" secondAttribute="trailing" id="cV1-8i-U76"/>
-                            <constraint firstItem="5mf-93-VtV" firstAttribute="top" secondItem="2b4-tD-nKj" secondAttribute="bottom" constant="60" id="jcq-WV-cN5"/>
-                            <constraint firstItem="2b4-tD-nKj" firstAttribute="top" secondItem="kA9-Em-6HG" secondAttribute="bottom" constant="60" id="paA-Wc-NAc"/>
-                            <constraint firstItem="5mf-93-VtV" firstAttribute="leading" secondItem="2b4-tD-nKj" secondAttribute="leading" id="vsr-QP-ntq"/>
+                            <constraint firstAttribute="trailing" secondItem="MnN-mW-LRW" secondAttribute="trailing" id="3hN-Up-jOZ"/>
+                            <constraint firstItem="MnN-mW-LRW" firstAttribute="leading" secondItem="8kW-wb-zhA" secondAttribute="leading" id="C9g-LZ-udq"/>
+                            <constraint firstItem="MnN-mW-LRW" firstAttribute="top" secondItem="8kW-wb-zhA" secondAttribute="top" id="G3L-i5-Zxh"/>
+                            <constraint firstItem="04H-Rf-BWf" firstAttribute="top" secondItem="MnN-mW-LRW" secondAttribute="bottom" id="Tuz-Uk-qg4"/>
                         </constraints>
                     </view>
                     <connections>
@@ -476,7 +494,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9WN-Ws-joh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3194" y="833"/>
+            <point key="canvasLocation" x="3192.8000000000002" y="832.53373313343332"/>
         </scene>
     </scenes>
     <resources>
